add multi language

--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -13,5 +13,81 @@
     "askConfirmationLogout": "¿Confirmar cerrar sesión?",
     "ok": "Sì",
     "writeYourMessage": "Escribe tu mensaje",
-    "loading": "cargando ..."
+    "loading": "cargando ...",
+    "keepup": "Continuar",
+    "begin": "Comenzar",
+    "liveTheWordOfGod": "Vivir según la Palabra de Dios",
+    "simpleAndEffectiveTool": "Una herramienta simple y efectiva para ayudarte a vivir la Palabra de Dios",
+    "answersToYourSpiritualQuestions": "Respuestas a tus preguntas espirituales",
+    "findAnswersToYourQuestions": "Encuentra respuestas a tus preguntas con nuestra herramienta de discusión y soporte",
+    "learnEasily": "Aprende fácilmente",
+    "learnTheBibleEveryDay": "Aprende la Biblia todos los días a través de nuestro cuestionario",
+    "goodmorningAndWelcomeToHelloBible": "¡Buenos días! \nBienvenido a HelloBible+",
+    "continueToCreateYourAccount": "Continúa para crear tu cuenta\no iniciar sesión",
+    "continueWithApple": "Continuar con Apple",
+    "continueWithGoogle": "Continuar con Google",
+    "continueWithFacebook": "Continuar con Facebook",
+    "orContinueWithMyEmailAddress": "O continuar con mi dirección de correo electrónico",
+    "orContinueWithSocialNetworks": "O continuar con redes sociales",
+    "byContinuingYouAgreeToOur": "Al continuar, aceptas nuestros ",
+    "termsOfUse": "Términos de Uso ",
+    "andOur": "y nuestra ",
+    "privacyNotice": "Aviso de Privacidad",
+    "goback": "Regresar",
+    "enterMyEmail": "Ingresar mi correo electrónico",
+    "hintEmailInput": "ejemplo@midominio.com",
+    "pleaseEnterYourEmailAddress": "Por favor, ingresa tu dirección de correo electrónico",
+    "pleaseEnterAValidEmailAddress": "Por favor, ingresa una dirección de correo electrónico válida",
+    "enterMyPassword": "Ingresar mi contraseña",
+    "continueForLoginToYourAccount": "Continuar para\niniciar sesión en tu cuenta",
+    "continueForCreateYourAccount": "Continuar para\nCrear tu cuenta",
+    "createMyPassword": "Crear mi contraseña",
+    "thisFieldIsRequired": "Este campo es obligatorio",
+    "confirmTheNewPassword": "Confirmar la nueva contraseña",
+    "passwordNotConfirmed": "Contraseña no confirmada",
+    "youAreAlmostThere": "¡Casi has terminado!\nConfigura tu perfil",
+    "pleaseEnterYourFirstAndLastName": "Por favor, ingresa tu nombre y apellido y una foto de perfil (opcional) para finalizar la creación de tu cuenta",
+    "finish": "Finalizar",
+    "camera": "Cámara",
+    "files": "Archivos",
+    "nameAndFirstname": "Nombre y Apellido",
+    "updateSubscription": "Actualizar suscripción",
+    "myAccount": "Mi cuenta",
+    "edit": "Editar",
+    "generalInformations": "Informaciones generales",
+    "email": "Correo electrónico",
+    "phone": "Número de teléfono",
+    "creationDate": "Fecha de creación",
+    "subscriptionType": "Tipo de suscripción",
+    "subscription": "Suscripción",
+    "subscriptionStatus": "Estado de la suscripción",
+    "subscriptionDate": "Fecha de suscripción",
+    "renewal": "Renovación",
+    "successfulUpdate": "Actualización exitosa",
+    "updateMyProfile": "Actualizar mi perfil",
+    "modifyMyAccount": "Modificar mi cuenta",
+    "pleaseEnterAValidPhone": "Por favor, ingresa un número de teléfono válido",
+    "subscribe": "Suscribirse",
+    "automaticRenewalAfterTheEndOfTheSubscription" : "* Renovación automática después de finalizar la suscripción.\nSin compromiso, cancelable en cualquier momento.",
+    "send": "Enviar",
+    "object": "Asunto",
+    "enterYourSubject": "Ingresa tu asunto",
+    "attachments": "Adjuntos",
+    "addFiles": "Agregar archivos",
+    "message": "Mensaje",
+    "enterYourMessage": "Ingresa tu mensaje",
+    "frequentlyAskedQuestions": "Preguntas frecuentes",
+    "termsOfService": "Términos de servicio",
+    "developer": "Desarrollador",
+    "contact": "Contacto",
+    "website": "Sitio web",
+    "version": "Versión",
+    "appliDescription": "HelloBible+ es una aplicación móvil para lorem ipsum dolor sit amet consectetur. Adipiscing proin in porttitor morbi mattis tellus. Posuere egestas sem gravida hendrerit turpis aliquam. Convallis velit dapibus dictum lacinia.",
+    "verseOfTheDay": "Versículo del día",
+    "resetToDefault": "Restablecer a los valores predeterminados",
+    "wordOfEncouragement": "Palabra de aliento",
+    "hour": "Hora",
+    "handleYourNotifOn": "Administra tus notificaciones en ",
+    "cancel": "Cancelar",
+    "chooseHour": "Ingrese la hora"
 }
