--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -50,7 +50,7 @@
   "finish": "Terminer",
   "camera": "Camera",
   "files": "Fichiers",
-  "nameAndFirstname": "Nom et Prénom",
+  "nameAndFirstname": "Prénoms et nom",
   "updateSubscription": "Mettre à jour Abonnement",
   "myAccount": "Mon compte",
   "edit": "Modifier",
