fix history message and infinite scroll

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -2,6 +2,7 @@
   "searchInBible" : "Find in the bible",
   "myProfile" : "My Profile",
   "mySubscription" : "My subscription",
+  "myHistory": "My history",
   "manageNotifications" : "Manage the notifications",
   "darkMode": "Dark Mode",
   "contactUs": "Contact us",
