--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -2,6 +2,7 @@
   "searchInBible" : "Chercher dans la bible",
   "myProfile" : "Mon Profil",
   "mySubscription" : "Mon abonnement",
+  "myHistory": "Mon historique",
   "manageNotifications" : "Gérer les notifications",
   "darkMode": "Mode Sombre",
   "contactUs": "Nous contacter",
