--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -8,7 +8,7 @@
   "contactUs": "Nous contacter",
   "help": "Aide",
   "about": "A propos",
-  "readOurConditions": "Lisez notre CGU",
+  "readOurConditions": "",
   "rateApp": "Notez l'application",
   "logout": "Se déconnecter",
   "askConfirmationLogout": "Voulez vraiment vous déconnecter ?",
